# opencl_test

./: CMakeLists.txt  test.cl
src/: main.cpp
